Fix nav menu background overlap

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -127,7 +127,11 @@ main {
 
 
 @media (max-width: 991px){
-     /* Move menu left to prevent overflow off screen */
+    /* Move nav down slightly to avoid unsightly overlap with coloured header background */
+    nav {
+        top: 3px;
+    }
+    /* Move menu left to prevent overflow off screen */
     #user-options-dropdown {
         left: -30px;
     }
@@ -159,4 +163,10 @@ footer {
 
 .header-container {
     margin-top: 260px;
+}
+
+/* ---- */
+
+.page-header {
+    margin-top: 65px;
 }
